update openapi spec to match, add WIP cad model sync and sls packer demos
